# fastapi-backend

./: .gitignore  Dockerfile  Dockerfile.simple  README.md  docker-stack.yml
.github/workflows/: deploy.yml
app/: main.py
python-apis/fastapi/basics/deploy/app-labs/: Dockerfile  Makefile  pyproject.toml
python-apis/fastapi/basics/deploy/app-labs/.github/workflows/: deploy.yml
python-apis/fastapi/basics/deploy/app-labs/scripts/: dev.py
scripts/: swarm-manage.sh
tests/: test_main.py
